--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "bootstrap": "^3.3.5",
     "dragula": "^3.3.0",
     "font-awesome": "^4.4.0",
-    "medium-editor": "^5.8.2"
+    "medium-editor": "^5.8.2",
+    "react": "^0.13.3"
   },
   "devDependencies": {
     "babelify": "^6.3.0",
