--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "dragula": "^3.3.0",
     "font-awesome": "^4.4.0",
     "medium-editor": "^5.8.2",
-    "react": "^0.13.3",
-    "react-bootstrap": "^0.25.2"
+    "react": "^0.13.3"
   },
   "devDependencies": {
     "babelify": "^6.3.0",
