--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.3.1",
     "gulp-browserify": "^0.5.1",
-    "gulp-cache": "^0.2.10",
     "gulp-concat": "^2.5.2",
     "gulp-livereload": "^3.8.0",
     "gulp-minify-css": "^1.1.6",
     "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.0.1",
+    "gulp-streamify": "^1.0.2",
     "gulp-uglify": "^1.2.0",
     "gulp-webserver": "^0.9.1",
     "resolve": "^1.1.6",
