--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "bootstrap": "^3.3.5",
+    "diff": "^2.1.3",
     "dragula": "^3.3.0",
     "font-awesome": "^4.4.0",
     "medium-editor": "^5.8.2",
