--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "dependencies": {
     "bootstrap": "^3.3.5",
     "diff": "^2.1.3",
-    "dragula": "^3.3.0",
     "font-awesome": "^4.4.0",
+    "immutable": "^3.7.5",
     "medium-editor": "^5.8.2",
-    "react": "^0.13.3"
+    "react": "^0.13.3",
+    "react-redux": "^3.1.0"
   },
   "devDependencies": {
     "babelify": "^6.3.0",
@@ -33,6 +34,7 @@
     "gulp-streamify": "^1.0.2",
     "gulp-uglify": "^1.2.0",
     "gulp-webserver": "^0.9.1",
+    "react-hot-loader": "^1.3.0",
     "resolve": "^1.1.6",
     "vinyl-source-stream": "^1.1.0"
   }
